--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,9 +5,9 @@
     <app-skills></app-skills>
     <app-curriculum-vitae></app-curriculum-vitae>
     <app-projects></app-projects>
-    <app-references></app-references>
+<!--    <app-references></app-references>-->
     <app-contact></app-contact>
     <footer class="footer">
-        <p> Copyright © 2020-<span>{{currentYear}}</span> By Zinedine Benkhider.</p>
+        <p> Copyright © 2022-<span>{{currentYear}}</span> By Nahom Demessie.</p>
     </footer>
 </div>
