--- a/src/app/curriculum-vitae/curriculum-vitae.component.html
+++ b/src/app/curriculum-vitae/curriculum-vitae.component.html
@@ -6,20 +6,16 @@
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
                 <h4><strong>{{'education.eductionTitle' | translate}}</strong></h4>
                 <ul class="timeline">
-                    <li>
-                        <h5>{{'education.masterDegreeTwo' | translate}}</h5>
-                        <em class="font-italic">{{'education.masterDegreeTwoDesc' | translate}}<br> {{'education.university' | translate}}</em>
-                        <p class="year p-2 d-flex justify-content-center">2019 - 2020</p>
-                    </li>
+
                     <li>
                         <h5>{{'education.masterDegreeOne' | translate}}</h5>
-                        <em class="font-italic">{{'education.masterDegreeOneDesc' | translate}} <br> {{'education.university' | translate}}</em>
-                        <p class="year p-2 d-flex justify-content-center">2018 - 2019</p>
+                        <em class="font-italic">{{'education.masterDegreeOneDesc' | translate}} <br> {{'education.masterUniversity' | translate}}</em>
+                        <p class="year p-2 d-flex justify-content-center">2022-2024</p>
                     </li>
                     <li>
                         <h5>{{'education.bachlorDegree' | translate}}</h5>
                         <em class="font-italic">{{'education.bachlorDegreeDesc' | translate}}<br> {{'education.university' | translate}}</em>
-                        <p class="year p-2 d-flex justify-content-center">2015 - 2018</p>
+                        <p class="year p-2 d-flex justify-content-center">2015 - 2020</p>
                     </li>
                 </ul>
             </div>
@@ -50,13 +46,13 @@
                     <div class="aos-init aos-animate" data-aos="fade-up" data-aos-delay="300">
                         <h4><strong>{{'education.languages' | translate}}</strong></h4>
                         <div class="noProgress langue">
-                            <span class=""><img src="assets/images/france-flag.png" width="20"
-                                    alt="drapeau de la france"><strong> {{'education.french' | translate}}</strong> <i class="val">
+                            <span class=""><img src="assets/images/Flag_of_Ethiopia.svg.png" width="20"
+                                    alt="drapeau de la france"><strong> {{'education.amharic' | translate}}</strong> <i class="val">
                                         {{'education.fluent' | translate}}</i></span>
                         </div>
                         <div class="noProgress langue">
                             <span class=""><img src="assets/images/united-kingdom-flag.png" width="20"
-                                    alt="drapeau du royaume uni"><strong> {{'education.english' | translate}}</strong> <i class="val"> {{'education.goodLevel' | translate}}</i></span>
+                                    alt="drapeau du royaume uni"><strong> {{'education.english' | translate}}</strong> <i class="val"> {{'education.fluent' | translate}}</i></span>
                         </div>
                     </div>
                 </div>
@@ -65,8 +61,8 @@
                         <h4><strong>{{'education.centerOfInterest' | translate}}</strong></h4>
                         <div class="noProgress langue">
                             <span>
-                                <fa-icon [icon]="volleyBallIcon"></fa-icon><strong> {{'education.sport' | translate}}</strong> <i class="val"> 5 {{'education.years' | translate}}
-                                    Volley Ball</i>
+                                <fa-icon [icon]="volleyBallIcon"></fa-icon><strong> {{'education.sport' | translate}}</strong> <i class="val">
+                                    Football</i>
                             </span>
                         </div>
 
@@ -76,12 +72,7 @@
                                     {{'education.tripsCountries' | translate}} </i>
                             </span>
                         </div>
-                        <div class="noProgress langue">
-                            <span>
-                                <fa-icon [icon]="gameIcon"></fa-icon><strong> {{'education.boardGames' | translate}} </strong> <i class="val">
-                                    {{'education.boardGamesPlayed' | translate}} </i>
-                            </span>
-                        </div>
+
                     </div>
                 </div>
             </div>
