--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -32,10 +32,10 @@
                         <a class="nav-link js-scroll-trigger smooth-scroll text-uppercase" href="#portfolio"> <i
                                 class='bx bx-book-content'></i>Portfolio</a>
                     </li>
-                    <li class="nav-item p-1 rounded">
-                        <a class="nav-link js-scroll-trigger smooth-scroll text-uppercase" href="#references"><i
-                                class='bx bxs-badge-check'></i> {{'header.references' | translate}}</a>
-                    </li>
+<!--                    <li class="nav-item p-1 rounded">-->
+<!--                        <a class="nav-link js-scroll-trigger smooth-scroll text-uppercase" href="#references"><i-->
+<!--                                class='bx bxs-badge-check'></i> {{'header.references' | translate}}</a>-->
+<!--                    </li>-->
                     <li class="nav-item p-1 rounded">
                         <a class="nav-link js-scroll-trigger smooth-scroll text-uppercase" href="#contact"> <i
                                 class='bx bx-envelope'></i>{{'header.contactMe' | translate}}</a>
@@ -43,12 +43,12 @@
                     <li class="nav-item p-1 rounded">
                         <mat-radio-group  [(ngModel)]="language" style="margin-top: 5px;"
                             (change)="languageChange($event)" aria-label="Select a language">
-                            <mat-radio-button value="en" >
-                                English
-                            </mat-radio-button>
-                            <mat-radio-button value="fr" class="pl-3">
-                                Français
-                            </mat-radio-button>
+<!--                            <mat-radio-button value="en" >-->
+<!--                                English-->
+<!--                            </mat-radio-button>-->
+<!--                            <mat-radio-button value="fr" class="pl-3">-->
+<!--                                Français-->
+<!--                            </mat-radio-button>-->
                         </mat-radio-group>
                     </li>
                 </ul>
