--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -5,15 +5,15 @@
         <div class="row">
             <div class="col-lg-4 col-md-12" data-aos="fade-right">
                 <picture>
-                    <img src="assets/images/profile.jpg" alt="photo de profil" class="img-fluid">
+                    <img src="assets/images/photo.jpeg" alt="photo de profil" class="img-fluid">
                 </picture>
                 <div class="d-flex justify-content-center">
-                    <a class="btn-social-media" href="https://www.linkedin.com/in/zinedine-benkhider/" rel="tooltip"
+                    <a class="btn-social-media" href="https://www.linkedin.com/in/nahom-demessie/" rel="tooltip"
                         target="_blank" title="{{'about.followMeOn' | translate}} Linkedin">
                         <i class="fa fa-linkedin fa-lg "></i>
                     </a>
                     <a class="btn-social-media btn-default btn-round btn-lg btn-icon"
-                        href="https://github.com/zinedineBenkhider" rel="tooltip" target="_blank"
+                        href="https://github.com/nahomneg" rel="tooltip" target="_blank"
                         title="{{'about.followMeOn' | translate}} GitHub">
                         <i class="fa fa-github fa-lg "></i></a>
                 </div>
@@ -31,11 +31,11 @@
                                 <fa-icon [icon]="mapMarker"></fa-icon><strong> {{'about.mobility' | translate}}</strong>
                             </li>
                             <li>
-                                <fa-icon [icon]="building"></fa-icon><strong> Lens, France</strong>
+                                <fa-icon [icon]="building"></fa-icon><strong> Maryland, USA</strong>
                             </li>
                             <li>
                                 <fa-icon [icon]="email"></fa-icon><strong><a href="mailto:zinedine.benkhider@gmail.com">
-                                        zinedine.benkhider@gmail.com</a></strong>
+                                        nahom.demessie23@gmail.com</a></strong>
                             </li>
                         </ul>
                     </div>
