--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,4 +1,5 @@
 <section id="contact">
+  <form id="send message" [formGroup]="contactForm" (ngSubmit)="onAddEvent()">
     <div class="container mb-5">
         <h2><strong >{{'contact.contactMe' | translate}}</strong></h2>
         <span class="bar-title mb-5"></span>
@@ -12,39 +13,55 @@
             </div>
             <div class="col-md-9">
                 <div class="contact-form">
+                  <div *ngIf="contactForm.controls['name'].invalid && contactForm.controls['name'].touched" class="alert alert-danger">
+                    <div *ngIf="contactForm.controls['name'].errors?.required">
+                      Name is required.
+                    </div>
+                  </div>
                     <div class="form-group">
-                        <label class="control-label col-sm-2" for="identite">{{'contact.identify' | translate}}</label>
+                        <label class="control-label col-sm-2" for="identite">Name</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" id="identite" placeholder="{{'contact.enterIdentify' | translate}}"
+                            <input type="text" class="form-control" formControlName="name" id="identite" placeholder="Enter Name"
                                 name="fname">
                         </div>
+                    </div>
+                    <div *ngIf="contactForm.controls['email'].invalid && contactForm.controls['email'].touched" class="alert alert-danger">
+                      <div *ngIf="contactForm.controls['email'].invalid">
+                        A valid email is required.
+                      </div>
                     </div>
                     <div class="form-group">
                         <label class="control-label col-sm-2" for="email">{{'contact.email' | translate}}</label>
                         <div class="col-sm-10">
-                            <input type="email" class="form-control" id="email" placeholder="{{'contact.enterEmail' | translate}}" name="email">
+                            <input type="email" class="form-control" formControlName="email" id="email" placeholder="{{'contact.enterEmail' | translate}}" name="email">
                         </div>
                     </div>
+                    <div *ngIf="contactForm.controls['subject'].invalid && contactForm.controls['subject'].touched" class="alert alert-danger">
+                      <div *ngIf="contactForm.controls['subject'].errors?.required">
+                        Subject is required.
+                      </div>
+                    </div>
                     <div class="form-group">
-                        <label class="control-label col-sm-2" for="object">{{'contact.object' | translate}}</label>
+                        <label class="control-label col-sm-2" for="object">Subject</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" id="object" placeholder="{{'contact.enterObject' | translate}}"
+                            <input type="text" class="form-control" formControlName="subject" id="object" placeholder="{{'contact.enterObject' | translate}}"
                                 name="object">
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="control-label col-sm-2" for="comment">{{'contact.message' | translate}}</label>
                         <div class="col-sm-10">
-                            <textarea class="form-control" rows="5" id="comment"></textarea>
+                            <textarea class="form-control" rows="5" formControlName="message" id="comment"></textarea>
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-sm-offset-2 col-sm-10">
-                            <button type="submit" class="btn btn-default">{{'contact.send' | translate}}</button>
+                          <button [disabled]="contactForm.status=='INVALID'" type="submit" class="btn btn-default">{{'contact.send' | translate}}</button>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+  </form>
 </section>
