--- a/src/app/references/references.component.html
+++ b/src/app/references/references.component.html
@@ -2,6 +2,6 @@
     <div class="container mb-5">
         <h2><strong>CI/CD Using Github Actions S3</strong></h2>
         <span class="bar-title mb-5"></span>
-      <a href="assets/lab7.pdf" target="_blank"><img src="assets/images/github.webp"/></a>
+      <a href="assets/CI_CD%20S3%20deployment%20with%20Github%20Actions.pdf" target="_blank"><img src="assets/images/github.webp"/></a>
     </div>
 </section>
